unpackaged/main/default/objects/BLND_DFDT_Linker__c/fields/BLND_Extra_Field__c.field-meta.xml
<CustomField>
	<fullName>BLND_Extra_Field__c</fullName>
	<label>Extra Field</label>
	<length>255</length>
	<type>Text</type>
</CustomField>