unpackaged/main/default/objects/BLND_DFDT_Linker__c/fields/BLND_Source_Link__c.field-meta.xml
<CustomField>
	<fullName>BLND_Source_Link__c</fullName>
	<label>Source Link</label>
	<length>40</length>
	<type>Text</type>
</CustomField>